# TheGame

./: .gitignore  AssetManager.cpp  AssetManager.h  Being.cpp  Being.h  BossGoblin.cpp  BossGoblin.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  DarkEnergyOrb.cpp  DarkEnergyOrb.h  Definitions.h  Element.h  EndGame.cpp  EndGame.h  Enemy.cpp  Enemy.h  EnemyCollision.cpp  EnemyCollision.h  EnemyList.h  EnergyOrb.cpp  EnergyOrb.h  Entity.cpp  Entity.h  EntityList.cpp  EntityList.h  EventManager.cpp  EventManager.h  FinishLine.cpp  FinishLine.h  FirePit.cpp  FirePit.h  Game.cpp  Game.h  GlobalMenu.cpp  GlobalMenu.h  HealthyForest.cpp  HealthyForest.h  HorizontalPureCollision.cpp  (+60 more)
Resources/Textures/.comments/: plano de fundo.png.xml
Resources/Textures/Fundo de níveis/: Ler antes de enviar.txt
SaveData/: names.txt  scores.txt
